<resources>
    <string name="app_name">projetLocationImm</string>
    <string name="connexion">Connexion</string>
    <string name="inscription">Inscription</string>
    <string name="bottom_bar_rechercher">Rechercher</string>
    <string name="bottom_bar_favoris">Favoris</string>
    <string name="bottom_bar_ajouter">Ajouter</string>
    <string name="bottom_bar_annonces">Annonces</string>
    <string name="bottom_bar_messages">Messages</string>
    <string name="se_connecter">Se connecter</string>
    <string name="continuer_sans_s_inscrire">Continuer sans s\'inscrire</string>
    <string name="s_inscrire">S\'inscrire</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titre">Entrez le titre de votre annonce</string>
    <string name="ville">Ville</string>
    <string name="particulier">Particulier</string>
    <string name="professionnel">Professionnel</string>
    <string name="nom">Nom</string>
    <string name="entrez_votre_nom">Entrez votre nom</string>
    <string name="pr_nom">Prénom</string>
    <string name="entrez_votre_pr_nom">Entrez votre prénom</string>
    <string name="t_l_phone">Téléphone</string>
    <string name="entrez_votre_t_l_phone">Entrez votre téléphone</string>
    <string name="email">Email</string>
    <string name="entrez_votre_email">Entrez votre email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="entre_votre_mot_de_passe">Entrez votre mot de passe</string>
    <string name="re_crivez_votre_mot_de_passe">Re-écrivez votre mot de passe</string>
    <string name="code_postal">Code postal</string>
    <string name="entrez_votre_code_postal">Entrez votre code postal</string>
    <string name="continuer_mon_inscription">Continuer mon inscription</string>
    <string name="ajoutAnn">Ajouter une annonce</string>
    <string name="ne_pas_s_abonner">Ne pas s\'abonner</string>
    <string name="abonnement_1_mois">Abonnement 1 mois</string>
    <string name="abonnement_3_mois">Abonnement 3 mois</string>
    <string name="abonnement_1_an">Abonnement 1 an</string>
    <string name="desc">Description du bien</string>
    <string name="decrireBien">Décrivez votre bien</string>
    <string name="caract">Caractéristiques</string>
    <string name="save">Enregistrer</string>
    <string name="moncompte">Mon compte</string>
    <string name="modif">Modifier mes données</string>
    <string name="modifab">Modifier mon abonnement</string>
    <string name="gerer_alertes">Gérer mes alertes</string>
    <string name="deco">Se déconnecter</string>
    <string name="title">Titre de l\'annonce</string>
    <string name="modifier">Modifier</string>
    <string name="contact">Contacter l\'annonceur</string>
    <string name="recherche_rapide">Recherche rapide</string>
    <string name="faites_une_recherche_rapide">Faites une recherche rapide</string>
    <string name="rechercher">Rechercher</string>
    <string name="modifAnnonce">Modifier mon annonce</string>
    <string name="savemodif">Enregistrer les modifications</string>
</resources>