<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InscriptionProSuiteActivity">

    <Button
        android:id="@+id/button_s_inscrire_pro"
        android:layout_width="156dp"
        android:layout_height="48dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="172dp"
        android:backgroundTint="@color/primary"
        android:text="@string/s_inscrire"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBarFleche"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app_bar_simple"
            app:navigationIcon="@drawable/icone_fleche"
            app:navigationIconTint="@color/on_primary"
            app:title="Inscription professionnel"
            app:titleTextColor="@color/on_primary" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        app:chipSpacingHorizontal="50dp"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:selectionRequired="true"
        app:singleSelection="true"
        tools:layout_editor_absoluteX="-86dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_1"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/ne_pas_s_abonner" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_2"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abonnement_1_mois" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_3"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abonnement_3_mois" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_4"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abonnement_1_an" />

    </com.google.android.material.chip.ChipGroup>


</androidx.constraintlayout.widget.ConstraintLayout>