<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        tools:layout_editor_absoluteY="1dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBarFleche"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app_bar_simple"
            app:navigationIcon="@drawable/icone_fleche"
            app:navigationIconTint="@color/on_primary"
            app:title="@string/connexion"
            app:titleTextColor="@color/on_primary" />

    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/button_se_connecter"
        android:layout_width="156dp"
        android:layout_height="48dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="206dp"
        android:backgroundTint="@color/primary"
        android:text="@string/se_connecter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="606dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="852dp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="370dp"

        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="30dp"
        android:hint="@string/mot_de_passe"
        android:textColorHint="@color/on_background"
        app:boxStrokeColor="@color/primary"
        app:endIconMode="clear_text"
        app:endIconTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/connexion_mdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entre_votre_mot_de_passe"
            android:textColor="@color/on_background" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="370dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="9dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:textColorHint="@color/on_background"
        app:boxStrokeColor="@color/primary"
        app:endIconMode="clear_text"
        app:endIconTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/connexion_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entrez_votre_email"
            android:textColor="@color/on_background" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>