<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbHorizontal="@color/on_background"
    android:scrollbarThumbVertical="@color/on_background"
    tools:context=".InscriptionActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="722dp" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        tools:layout_editor_absoluteY="1dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBarFleche"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app_bar_simple"
            app:navigationIcon="@drawable/icone_fleche"
            app:navigationIconTint="@color/on_primary"
            app:title="@string/inscription"
            app:titleTextColor="@color/on_primary" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="395dp"
        android:layout_height="657dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/button_particulier"
                    android:layout_width="169dp"
                    android:layout_height="47dp"
                    android:layout_margin="16dp"
                    android:backgroundTint="@color/primary"
                    android:text="@string/particulier"
                    android:textColor="@color/on_primary"
                    app:icon="@drawable/icone_check"
                    app:iconTint="@color/on_primary" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/button_pro"
                    android:layout_width="169dp"
                    android:layout_height="47dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/on_primary"
                    android:text="@string/professionnel"
                    android:textColor="@color/primary" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="370dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="9dp"
                android:layout_marginTop="10dp"
                android:hint="@string/nom"
                android:textColorHint="@color/on_background"
                app:boxStrokeColor="@color/primary"
                app:endIconMode="clear_text"
                app:endIconTint="@color/primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.001">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/field_nom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/entrez_votre_nom"
                    android:textColor="@color/on_background" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="370dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="9dp"
                android:layout_marginTop="10dp"
                android:hint="@string/pr_nom"
                android:textColorHint="@color/on_background"
                app:boxStrokeColor="@color/primary"
                app:endIconMode="clear_text"
                app:endIconTint="@color/primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.001">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/field_prenom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/entrez_votre_pr_nom"
                    android:textColor="@color/on_background" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="370dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="9dp"
                android:layout_marginTop="10dp"
                android:hint="@string/t_l_phone"
                android:textColorHint="@color/on_background"
                app:boxStrokeColor="@color/primary"
                app:endIconMode="clear_text"
                app:endIconTint="@color/primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.001">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/field_telephone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/entrez_votre_t_l_phone"
                    android:textColor="@color/on_background" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="370dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="9dp"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                android:textColorHint="@color/on_background"
                app:boxStrokeColor="@color/primary"
                app:endIconMode="clear_text"
                app:endIconTint="@color/primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.001">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/field_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/entrez_votre_email"
                    android:textColor="@color/on_background" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="370dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="9dp"
                android:layout_marginTop="10dp"
                android:hint="@string/mot_de_passe"
                android:textColorHint="@color/on_background"
                app:boxStrokeColor="@color/primary"
                app:endIconMode="clear_text"
                app:endIconTint="@color/primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.001">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/field_mdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/entre_votre_mot_de_passe"
                    android:textColor="@color/on_background" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="370dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="9dp"
                android:layout_marginTop="10dp"
                android:hint="@string/mot_de_passe"
                android:textColorHint="@color/on_background"
                app:boxStrokeColor="@color/primary"
                app:endIconMode="clear_text"
                app:endIconTint="@color/primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.001">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/field_mdp2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/entre_votre_mot_de_passe"
                    android:textColor="@color/on_background" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="370dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="9dp"
                android:layout_marginTop="10dp"
                android:hint="@string/ville"
                android:textColorHint="@color/on_background"
                app:boxStrokeColor="@color/primary"
                app:endIconMode="clear_text"
                app:endIconTint="@color/primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.001">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/field_ville"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Entrez votre ville"
                    android:textColor="@color/on_background" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="370dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="9dp"
                android:layout_marginTop="10dp"
                android:hint="@string/code_postal"
                android:textColorHint="@color/on_background"
                app:boxStrokeColor="@color/primary"
                app:endIconMode="clear_text"
                app:endIconTint="@color/primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.001">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/field_codePostal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/entrez_votre_code_postal"
                    android:textColor="@color/on_background" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/button_s_inscrire"
                android:layout_width="156dp"
                android:layout_height="48dp"
                android:layout_marginStart="120dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/primary"
                android:text="@string/s_inscrire"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>