<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompteActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        tools:layout_editor_absoluteY="1dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBarFleche"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app_bar_simple"
            app:navigationIcon="@drawable/icone_fleche"
            app:navigationIconTint="@color/on_primary"
            app:title="Mon compte"
            app:titleTextColor="@color/on_primary" />

    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/button_modif"
        android:layout_width="264dp"
        android:layout_height="48dp"
        android:layout_marginTop="83dp"
        android:backgroundTint="@color/secondary_container"
        android:text="@string/modif"
        android:textColor="@color/on_secondary_container"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <Button
        android:id="@+id/button_gerer_alertes"
        android:layout_width="264dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/secondary_container"
        android:text="@string/gerer_alertes"
        android:textColor="@color/on_secondary_container"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_modif" />

    <Button
        android:id="@+id/button_deconnexion"
        android:layout_width="264dp"
        android:layout_height="48dp"
        android:layout_marginTop="416dp"
        android:backgroundTint="@color/background"
        android:text="@string/deco"
        android:textColor="@color/on_background"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_modif"
        app:strokeColor="@color/on_background"
        app:strokeWidth="2dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>