<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccueilActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app_bar"
            app:title="Recherche"
            app:titleTextColor="@color/on_primary" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="639dp"
        app:backgroundTint="@color/primary"
        app:itemIconTint="@color/on_primary"
        app:itemRippleColor="@color/on_primary"
        app:itemTextColor="@color/on_primary"
        app:labelVisibilityMode="labeled"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/bottom_navigation_menu"
        tools:layout_editor_absoluteX="43dp" >

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="296dp"

                android:layout_height="match_parent"
                android:layout_marginStart="13dp"
                android:layout_marginTop="10dp"
                android:hint="@string/rechercher"
                android:textColorHint="@color/on_background"
                app:boxStrokeColor="@color/primary"
                app:endIconMode="clear_text"
                app:endIconTint="@color/primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.389">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/recherche_rapide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faites_une_recherche_rapide"
                    android:textColor="@color/on_background" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button_recherche_rapide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginStart="11dp"
                android:layout_marginTop="6dp"
                android:backgroundTint="@color/primary"
                android:contentDescription="@string/recherche_rapide"
                app:layout_constraintStart_toEndOf="@+id/textInputLayout2"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icone_rechercher"
                app:tint="@color/on_primary" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>



    <ListView
        android:id="@+id/list_view_accueil"
        android:layout_width="392dp"
        android:layout_height="503dp"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout">

    </ListView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_recherche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/primary"
        android:contentDescription="@string/recherche_rapide"
        app:layout_constraintBottom_toBottomOf="@+id/list_view_accueil"
        app:layout_constraintEnd_toEndOf="@+id/appBarLayout2"
        app:srcCompat="@drawable/icone_rechercher"
        app:maxImageSize="40dp"
        app:fabCustomSize="72dp"
        app:tint="@color/on_primary"/>

</androidx.constraintlayout.widget.ConstraintLayout>

